version 1.1.1
- Fix "pmax" bug in printing of actual, fitted and residuals
- When using "<-" save mechanism for models, preserve the model
  info so it's accessible for genr, etc.

07/23/03 version 1.1.0
- Extend DATAINFO structure -- allow specification of "display
  names" for variables (these are shown in graphs)
- Provide "label" command for setting the description and/or
  display name for a variable
- Add script commands for saving and displaying models and
  graphs 
- Fix effect of sample range on the "genr" command
- Improvements to the gretl console (command history, etc.)
- Add the Johansen cointegration test to the gui menus
- Add option to use QR decomposition instead of Cholesky for
  calculating regression results
- Fix bug: periodogram command failed in batch mode
- Make uniform() PRNG generate in the standard range 0-1
  (rather than 1-100, as it was previously)
- Small modifications to path-searching
- Updates to the Spanish help files
- Activate a few missing translated strings
- Fix "sim" command so it can be used to modify just one 
  observation in a given series
- Fix bugs associated with starting a dataset by importing from
  a database
- Allow access to RATS databases via command line and scripts
- Fixes (I think) for R startup 
- Clean-up: remove all wasted array elements
- Update to libtool 1.5
- Update win32 version to gtk version 2.2.2

05/26/03 version 1.0.9
- Add non-linear least squares ("nls" command, Levenberg-
  Marquandt algorithm from minpack, with either analytical or
  numerical derivatives)
- Fix focus bug when editing the description for a variable in
  the gretl main window
- Add a new means of grabbing fitted values from a regression:
  "genr newname = yhat" (parallels "uhat")
- Updates to manual (includes details on new nls command)
- Spanish version: provide access to English help files as well
  as Spanish
- Add rudimentary scripting capacity to gnuplot command (can