@@ -2,6 +2,8 @@ version 1.1.1
 - Fix "pmax" bug in printing of actual, fitted and residuals
 - When using "<-" save mechanism for models, preserve the model
   info so it's accessible for genr, etc.
+- Fix bug in numbering of auto-generated of lagged variables
+- Fix bug in parsing of gnuplot { ... } special command list
 
 07/23/03 version 1.1.0
 - Extend DATAINFO structure -- allow specification of "display
